tests/paczka1/fuzzy1/76071811.err
Error in line 4: 99HxeoJE A652 8,9
Error in line 5: MhUZOF93 A189 3,3
Error in line 11: sZR6TZFh S890 84,8
Error in line 9: 99HxeoJE A652 60,0
Error in line 18: 99HxeoJE S890 21,3
